--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>SC2ReplayStatsUploader</title>
     <link type="text/css" rel="stylesheet" href="../../css/simple-grid.min.css">
+    <link type="text/css" rel="stylesheet" href="../../css/style.css">
   </head>
     <main id="root"></main>
     <script src='./app.bundle.js'></script>
